feat: adiciona papeis de usuario e gestao de status dos relatos
Fecha a lacuna do dominio onde relatos eram criados mas nunca
resolvidos: introduz Role (CIDADAO/GESTOR) propagado no JWT,
autorizacao por papel para endpoints de gestao, maquina de estados
de StatusRelato (Relato.atualizarStatus) e os endpoints
GET/PATCH /api/v1/gestao/relatos para o gestor listar e resolver
relatos.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018YSiENvTFh8BQxFv8WtjHM